addons/kyverno/policies/medtech-hipaa_security_tech_encryption-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-hipaa_security_tech_encryption
  annotations:
    rulehub.id: medtech.hipaa_security_tech_encryption
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "medtech.hipaa_security_tech_encryption: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
